--- a/client/style.css
+++ b/client/style.css
@@ -110,7 +110,8 @@
 .contabomba1,.contabomba2{
 	position:relative;
 	font-size:10px;
-	top:10px;	
+	top:11px;
+	margin-left: 11px;	
 }
 .contabomba1{
 	color:rgba(0,255,0,1);
