--- a/client/css/index.css
+++ b/client/css/index.css
@@ -130,3 +130,48 @@ background-color: rgba(255,255,255,0.2) !important;
 .full-width{
     width: 100%;
 }
+
+.actions-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    background-color: red;
+    justify-content: center;
+    align-items: center;
+}
+
+.actions-buttons{
+    display: flex;
+    flex-direction: row;
+}
+
+.game-actions{
+    margin: 10px;
+}
+
+.avalaible-games{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+
+.game-title{
+    color: #fff;
+    font-style: italic;
+}
+
+#mibod{
+    height: 100%;
+}
+
+#inicio{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.games-scroll{
+    max-height: calc(100% - 300px);
+    overflow: auto;
+}
